# modnote

./: .gitignore  Cargo.toml  README.md  db.sqlite
migration/: Cargo.toml
migration/src/: lib.rs  m20260218_040456_create_tables.rs
migration/src/entities/: collection_notebooks.rs  collections.rs  mod.rs  note_tags.rs  notebooks.rs  prelude.rs  tags.rs
src/: main.rs
src/lib/: db.rs  mod.rs  notebook.rs
src/lib/crud/: mod.rs  note.rs  notebook.rs
src/lib/entities/: mod.rs  notebook_notes.rs  notebooks.rs  notes.rs  prelude.rs
