[package]
name = "modnote"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Diaz"]
description = "A personal CLI tool that acts as a study reference notebook for learning Rust standard library modules, macros, types, and keywords"
license = "MIT"
repository = "https://github.com/1Samuel17/rust-cli-template"
readme = "README.md"
keywords = ["cli", "notebook", "rust", "standard-library"]
categories = ["command-line-utilities"]

[[bin]]
name = "modnote"
path = "src/main.rs"

[lib]
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
tracing-subscriber = "0.3.22"
sea-orm = { version = "2.0.0-rc.32", features = [ "sqlx-sqlite", "runtime-tokio", "macros", "debug-print" ] }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
sea-orm-migration = { version = "2.0.0-rc.32" }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
